# labor-ai

./: .gitignore  .lintstagedrc.mjs  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  app_user.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_app_user.py
backend/tests/: test_health.py
docs/: architecture.html  build-plan.html  data-ingest-query.html  mockup.html  schema-reference.html  test-plan.html
docs/design/: labor-ai-api-spec-latest.html  labor-ai-architecture-latest.html  labor-ai-data-ingest-query-latest.html  labor-ai-observability-plan-latest.html  labor-ai-schema-reference-latest.html  labor-ai-test-plan-latest.html
docs/design/_archived/: labor-ai-mockup-v10.html  labor-ai-mockup-v11.html
frontend/: package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/health/: page.tsx
frontend/lib/: api-client.test.ts  api-client.ts
